--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Hello World</title>
+        <title>Eduvis</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.1/papaparse.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <p>
-            Jamie was here.
-        </p>
+	<canvas id="myChart" width="400" height="400"></canvas>
+
+	<script src="script.js"></script>
     </body>
 </html>
