Added onchange to drop down

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<canvas id="myChart" width="800" height="600"></canvas>
 	<script src="script.js"></script>
     </body>
-    <select>
+    <select id="LEA" onchange="getLEA(this)">
         <option value="Lambeth (208)">Lambeth (208)</option>
         <option value="Lewisham (209)">Lewisham (209)</option>
         <option value="Southwark (210)">Southwark (210)</option>
