--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <body>
     	<canvas id="myChart" width="800" height="600"></canvas>
 
-        <select id="LEA">
-            <option value="Lambeth (208)">Lambeth (208)</option>
-            <option value="Lewisham (209)">Lewisham (209)</option>
-            <option value="Southwark (210)">Southwark (210)</option>
-            <option value="Birmingham (330)">Birmingham (330)</option>
-        </select>
+        <select id="LEA"></select>
 
     	<script src="script.js"></script>
     </body>
