Added Measure drop-down

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         	<canvas id="myChart" width="800" height="600"></canvas>
 
             <select id="LEA"></select>
+            <select id="Measure"></select>
         </div>
 
     	<script src="script.js"></script>
