--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Loading schools data...
         </div>
 
-        <div id="main-content" class="container">
+        <div id="main-content" class="container-fluid">
             <div class="row">
                 <div class="col-md-8">
                     <div class="panel panel-default">
