added average lines

--- a/index.html
+++ b/index.html
@@ -34,8 +34,34 @@
                             <h3 class="panel-title">Selection</h3>
                         </div>
                         <div class="panel-body">
-                            <label control-label>LEA<select id="LEA" class="form-control"></select></label>
-                            <label control-label>Measure<select id="Measure" class="form-control"></select></label>
+                            <label control-label>
+                                LEA
+                                <select id="LEA" class="form-control"></select>
+                            </label><br>
+                            <label control-label>
+                                Measure
+                                <select id="Measure" class="form-control"></select>
+                            </label>
+                        </div>
+
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Display Averages</h3>
+                        </div>
+                        <div class="panel-body">
+                            <div class="checkbox">
+                                <label>
+                                    <input id="nat-avg" type="checkbox" value="">
+                                    National
+                                </label><br>
+                                <label>
+                                    <input id="top-avg" type="checkbox" value="">
+                                    Top 10%
+                                </label><br>
+                                <label>
+                                    <input id="bot-avg" type="checkbox" value="">
+                                    Bottom 10%
+                                </label>
+                            </div>
                         </div>
                     </div>
 
