added school of interest

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
                                 Measure
                                 <select id="Measure" class="form-control" data-bind="options: measureOptions, value: selectedMeasure"></select>
                             </label>
+                            <label control-label>
+                                School of interest
+                                <select id="Measure" class="form-control" data-bind="options: selectedSchoolsNames, value: focusedSchool, optionsCaption: 'select a school...'"></select>
+                            </label>
                         </div>
 
                         <div class="panel-heading">
