--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </label>
                             <label control-label>
                                 School of interest
-                                <select id="Measure" class="form-control" data-bind="options: selectedSchoolsNames, value: focusedSchool, optionsCaption: 'select a school...'"></select>
+                                <select id="Measure" class="form-control" data-bind="options: selectedSchoolsNamesAlphabetical, value: focusedSchool, optionsCaption: 'select a school...'"></select>
                             </label>
                         </div>
 
