--- a/index.html
+++ b/index.html
@@ -20,11 +20,23 @@
         <div id="main-content" class="container-fluid" data-bind="visible: schoolDataLoaded">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <div id="myChart" style="width:100%; height:600px;"></div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <div id="myChart" style="width:100%; height:600px;"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <p>Definition: <span data-bind="text: selectedMeasureDescription"></span>.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
+
                 </div>
 
                 <div class="col-md-4">
