--- a/index.html
+++ b/index.html
@@ -11,12 +11,50 @@
 
     </head>
     <body>
-        <div id="loading" data-bind="visible: !schoolDataLoaded()">
-            <object id='loading-svg' type="image/svg+xml" data="cube.svg">Your browser does not support SVG</object>
-            <br>
-            Loading schools data...
-        </div>
 
+        <!-- NAVBAR -->
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">Eduvis</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="/">Home</a></li>
+                        <li><a href="/">About</a></li>
+                        <li><a href="/">Blog</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div><!--/.container-fluid -->
+        </nav>
+
+        <!-- LOADING SCREEN -->
+        <aside class="loading-screen" style="position:fixed; top:0; right:0; bottom:0; left:0; z-index:9999" data-bind="visible: !schoolDataLoaded()">
+            <div class="col-xs-8 col-xs-offset-2" style="position:absolute; top:50%; margin-top:-7em">
+                <div class="page-header">
+                    <hgroup style="text-align:center">
+                        <h1>
+                            <i class="text-primary glyphicon glyphicon-education"></i>
+                            Eduvis<br>
+                            <small>Loading 2014 schools data...</small>
+                        </h1>
+                    </hgroup>
+                </div>
+                <p class="loading-status text-info" style="text-align:center">
+                    Visualising UK education data.<br><br>
+                    <i class="glyphicon glyphicon-info-sign"></i><a href="#">ABOUT</a>
+                    <i class="glyphicon glyphicon-pencil"></i><a href="#">BLOG</a>
+                </p>
+            </div>
+        </aside>
+
+        <!-- MAIN CONTENT -->
         <div id="main-content" class="container-fluid" data-bind="visible: schoolDataLoaded">
             <div class="row">
                 <div class="col-md-8">
