--- a/index.html
+++ b/index.html
@@ -66,10 +66,20 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-md-9">
                             <div class="panel panel-default">
                                 <div class="panel-body">
-                                    <p>Definition: <span data-bind="text: selectedMeasureDescription"></span>.</p>
+                                    <p><strong>Definition:</strong> <span data-bind="text: selectedMeasureDescription"></span>.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                                <div class="btn-group" role="group">
+                                    <button type="button" class="btn btn-default">Share</button>
+                                </div>
+                                <div class="btn-group" role="group">
+                                    <button type="button" class="btn btn-default">Download data</button>
                                 </div>
                             </div>
                         </div>
