--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="col-md-3">
                             <div class="btn-group btn-group-justified" role="group" aria-label="...">
                                 <div class="btn-group" role="group">
-                                    <button type="button" class="btn btn-default">Share</button>
+                                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#shareModal">Share</button>
                                 </div>
                                 <div class="btn-group" role="group">
                                     <button type="button" class="btn btn-default">Download data</button>
@@ -132,6 +132,22 @@
                 </div>
             </div>
         </div>
+
+        <!-- SHARE MODAL -->]
+        <div id="shareModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-body">
+                <span data-bind="text: currentOptionsQueryStringURL"></span>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+
+          </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
