remove stray bracket from html

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
         </div>
 
-        <!-- SHARE MODAL -->]
+        <!-- SHARE MODAL -->
         <div id="shareModal" class="modal fade" role="dialog">
           <div class="modal-dialog">
 
