prevent main content from briefly appearing on initial html load

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <!-- MAIN CONTENT -->
-        <div id="main-content" class="container-fluid" data-bind="visible: schoolDataLoaded">
+        <div id="main-content" class="container-fluid" style="display: none;" data-bind="visible: schoolDataLoaded">
             <div class="row">
                 <div class="col-md-8">
                     <div class="row">
