--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="social-sharing.css">
 
     </head>
     <body>
@@ -76,7 +78,7 @@
                         <div class="col-md-3">
                             <div class="btn-group btn-group-justified" role="group" aria-label="...">
                                 <div class="btn-group" role="group">
-                                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#shareModal">Share</button>
+                                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#shareModal" data-bind="click: updateShortenedUrl">Share</button>
                                 </div>
                                 <div class="btn-group" role="group">
                                     <button type="button" class="btn btn-default">Download data</button>
@@ -138,8 +140,20 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <span data-bind="text: currentOptionsQueryStringURL"></span>
-                    </div>
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon1">URL</span>
+                            <input type="text" class="form-control" aria-describedby="basic-addon1" data-bind="value: shortenedUrl">
+                        </div>
+                        <br>
+                        <!-- Twitter -->
+                        <a title="Share on Twitter" target="_blank" class="btn btn-twitter" data-bind="attr: { href: twitterUrl}"><i class="fa fa-twitter"></i> Twitter</a>
+                        <!-- Facebook -->
+                        <a title="Share on Facebook" target="_blank" class="btn btn-facebook" data-bind="attr: { href: facebookUrl}"><i class="fa fa-facebook"></i> Facebook</a>
+                        <!-- LinkedIn -->
+                        <a title="Share on LinkedIn" target="_blank" class="btn btn-linkedin" data-bind="attr: { href: linkedInUrl}"><i class="fa fa-linkedin"></i> LinkedIn</a>
+                        <!-- Email -->
+                        <a title="Share by email" target="_blank" class="btn btn-email" data-bind="attr: { href: emailUrl}"><i class="glyphicon glyphicon-envelope"></i> Email</a>
+                       </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
