added spinning icon on loading screen

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="page-header">
                     <hgroup style="text-align:center">
                         <h1>
-                            <i class="text-primary glyphicon glyphicon-education"></i>
+                            <i class="text-primary glyphicon glyphicon-education glyphicon-spin"></i>
                             Eduvis<br>
                             <small>Loading 2014 schools data...</small>
                         </h1>
