make share url readonly

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="modal-body">
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon1">URL</span>
-                            <input type="text" class="form-control" aria-describedby="basic-addon1" data-bind="value: shortenedUrl">
+                            <input type="text" class="form-control" aria-describedby="basic-addon1" data-bind="value: shortenedUrl" readonly>
                         </div>
                         <br>
                         <!-- Twitter -->
