--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="social-sharing.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/social-sharing.css">
 
         <!-- GOOGLE ANALYTICS -->
         <script>
@@ -184,8 +184,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.1/papaparse.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-debug.js"></script>
-        <script src="ko.bindings.popover.js"></script>
+        <script src="assets/js/vendor/ko.bindings.popover.js"></script>
 
-    	<script src="script.js"></script>
+    	<script src="assets/js/script.js"></script>
     </body>
 </html>
