--- a/index.html
+++ b/index.html
@@ -1,191 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Eduvis</title>
-
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
-
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/social-sharing.css">
-
-        <!-- GOOGLE ANALYTICS -->
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-64606187-1', 'auto');
-            ga('send', 'pageview');
-        </script>
-    </head>
-    <body>
-
-        <!-- NAVBAR -->
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="/">Eduvis</a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home</a></li>
-                        <li><a href="/">About</a></li>
-                        <li><a href="/">Blog</a></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
-            </div><!--/.container-fluid -->
-        </nav>
-
-        <!-- LOADING SCREEN -->
-        <div class="loading-screen" data-bind="visible: !schoolDataLoaded()">
-            <div class="col-xs-8 col-xs-offset-2" style="position:absolute; top:50%; margin-top:-7em">
-                <div class="page-header">
-                    <hgroup style="text-align:center">
-                        <h1>
-                            <i class="text-primary glyphicon glyphicon-education glyphicon-spin"></i>
-                            Eduvis<br>
-                            <small>Loading 2014 schools data...</small>
-                        </h1>
-                    </hgroup>
-                </div>
-                <p class="loading-status text-info" style="text-align:center">
-                    Visualising UK education data.<br><br>
-                    <i class="glyphicon glyphicon-info-sign"></i><a href="#">ABOUT</a>
-                    <i class="glyphicon glyphicon-pencil"></i><a href="#">BLOG</a>
-                </p>
-            </div>
-        </div>
-
-        <!-- MAIN CONTENT -->
-        <div id="main-content" class="container-fluid" style="display: none;" data-bind="visible: schoolDataLoaded">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    <div id="myChart" style="width:100%; height:600px;"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    <p><strong>Definition:</strong> <span data-bind="text: selectedMeasureDescription"></span>.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                                <div class="btn-group" role="group">
-                                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#shareModal" data-bind="click: updateShortenedUrl">Share</button>
-                                </div>
-                                <div class="btn-group" role="group">
-                                    <button type="button" class="btn btn-default">Download data</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-md-4">
-                    
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Selection</h3>
-                        </div>
-                        <div class="panel-body">
-                            <label class="control-label">
-                                LEA
-                                <select class="form-control" data-bind="options: leaOptions, value: selectedLea"></select>
-                            </label>
-
-                            <button class="btn ko-popover" data-bind="visible: selectedSchoolsExcludedNames, popover: true, popoverOptions: { html: true, content: selectedSchoolsExcludedNames }"
-                                                data-popover-placement="bottom"
-                                                data-popover-title="Data not available for:">
-                                Excluded schools
-                            </button><br>
-
-                            <label class="control-label">
-                                Measure
-                                <select class="form-control" data-bind="options: measureOptions, value: selectedMeasure"></select>
-                            </label>
-                            <label class="control-label">
-                                School of interest
-                                <select class="form-control" data-bind="options: selectedSchoolsNamesAlphabetical, value: focusedSchool, optionsCaption: 'select a school...'"></select>
-                            </label>
-                        </div>
-
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Display Averages</h3>
-                        </div>
-                        <div class="panel-body">
-                            <div class="checkbox">
-                                <label>
-                                    <input id="nat-avg" type="checkbox" value="" data-bind="checked: showNationalAverage">
-                                    National
-                                </label><br>
-                                <label>
-                                    <input id="top-avg" type="checkbox" value="" data-bind="checked: showTop10Percent">
-                                    Top 10%
-                                </label><br>
-                                <label>
-                                    <input id="bot-avg" type="checkbox" value="" data-bind="checked: showBottom10Percent">
-                                    Bottom 10%
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        <!-- SHARE MODAL -->
-        <div id="shareModal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <div class="input-group">
-                            <span class="input-group-addon" id="basic-addon1">URL</span>
-                            <input type="text" class="form-control" aria-describedby="basic-addon1" data-bind="value: shortenedUrl" readonly>
-                        </div>
-                        <br>
-                        <!-- Twitter -->
-                        <a title="Share on Twitter" target="_blank" class="btn btn-twitter" data-bind="attr: { href: twitterUrl}"><i class="fa fa-twitter"></i> Twitter</a>
-                        <!-- Facebook -->
-                        <a title="Share on Facebook" target="_blank" class="btn btn-facebook" data-bind="attr: { href: facebookUrl}"><i class="fa fa-facebook"></i> Facebook</a>
-                        <!-- LinkedIn -->
-                        <a title="Share on LinkedIn" target="_blank" class="btn btn-linkedin" data-bind="attr: { href: linkedInUrl}"><i class="fa fa-linkedin"></i> LinkedIn</a>
-                        <!-- Email -->
-                        <a title="Share by email" target="_blank" class="btn btn-email" data-bind="attr: { href: emailUrl}"><i class="glyphicon glyphicon-envelope"></i> Email</a>
-                       </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <script src="http://code.highcharts.com/highcharts.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.1/papaparse.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-debug.js"></script>
-        <script src="assets/js/vendor/ko.bindings.popover.js"></script>
-
-    	<script src="assets/js/script.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>test</title>
+    <link rel="stylesheet" href="css.css">
+    <script src="scripts.js"></script>
+  </head>
+  <body>
+    <nav-bar params="route: route"></nav-bar>
+    <div id="page" data-bind="component: { name: route().page, params: route }"></div>
+  </body>
 </html>
