--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>test</title>
+    <title>Eduvis</title>
     <link rel="stylesheet" href="css.css">
     <script src="scripts.js"></script>
   </head>
