--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <!-- build:css -->
       <link href="bower_modules/components-bootstrap/css/bootstrap.min.css" rel="stylesheet">
       <link href="bower_modules/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
+      <link href="bower_modules/jquery-ui/themes/base/jquery-ui.css" rel="stylesheet">
       <link href="css/social-sharing.css" rel="stylesheet">
       <link href="css/styles.css" rel="stylesheet">
     <!-- endbuild -->
