changed to use yeti bootstrap theme

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       <link href="bower_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
       <link href="bower_modules/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
       <link href="bower_modules/jquery-ui/themes/base/jquery-ui.css" rel="stylesheet">
+      <link href="css/yeti.bootstrap.min.css" rel="stylesheet">
       <link href="css/social-sharing.css" rel="stylesheet">
       <link href="css/styles.css" rel="stylesheet">
     <!-- endbuild -->
