--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="img/favicon.png">
-    <title>Eduvis</title>
+    <title>eduvis</title>
     <link rel="stylesheet" href="css.css">
     <script src="scripts.js"></script>
   </head>
