Added table view

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>eduvis</title>
     <!-- build:css -->
       <link href="bower_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link href="bower_modules/DataTables/media/css/jquery.dataTables.css" rel="stylesheet">
       <link href="bower_modules/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
       <link href="bower_modules/jquery-ui/themes/base/jquery-ui.css" rel="stylesheet">
       <link href="css/yeti.bootstrap.min.css" rel="stylesheet">
