--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="images/favicon.png">
     <title>eduvis</title>
     <link rel="stylesheet" href="css.css">
     <script src="scripts.js"></script>
